--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -5,7 +5,6 @@ on:
 env:
   REGISTRY: ghcr.io
   IMAGE_NAME: ${{ github.repository }}
-  SHOULD_PUSH: ${{ github.ref == 'refs/heads/main' && 'true' || 'false' }}
 
 jobs:
   build:
@@ -22,4 +21,5 @@ jobs:
         name: Build image
         uses: docker/build-push-action@v5
         with:
-          push: $SHOULD_PUSH
+          push: ${{ github.ref == 'refs/heads/main' && 'true' || 'false' }}
+          tags: ${{ github.repository }}:latest
