--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -21,5 +21,5 @@ jobs:
         name: Build image
         uses: docker/build-push-action@v5
         with:
-          push: ${{ github.ref == 'refs/heads/main' && 'true' || 'false' }}
-          tags: ${{ github.repository }}:latest
+          push: false
+          tags: ${{ github.repository }}:${{ github.sha }}
